--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <link rel="stylesheet" href="style.css" />
     <title>Rotating Navigation</title>
   </head>
-  <body>
+  <body> 
     <div class="container">
       <div class="circle-container">
         <div class="circle">
-          <button id="close"><i class="fas fa-times"></i></button>
-          <button id="open"><i class="fas fa-bars"></i></i></button>
+          <button id="close" ><i class="fa-lg fas fa-times"></i></button>
+          <button id="open" ><i class="fas fa-bars"></i></i></button>
         </div>
       </div>
-      <div class="content-front">
+      <div class="content">
         <h1 class="main-heading">Amazing Article</h1>
         <h6 class="margin-bottom-medium">Florin pop</h6>
         <p class="first-para margin-bottom-medium">
@@ -50,9 +50,9 @@
     </div>
     <nav>
       <ul>
-        <li><i class="fas fa-home">Home</i></li>
-        <li><i class="fas fa-user-alt">User</i></li>
-        <li><i class="fas fa-envelope">Contact</i></li>
+        <li><i class="fas fa-home"></i>Home</li>
+        <li><i class="fas fa-user-alt"></i>User</li>
+        <li><i class="fas fa-envelope"></i>Contact</li>
       </ul>
     </nav>
     <script type="text/javascript" src="index.js"></script>
